Corrigindo estrutura das views

--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -1,9 +1,32 @@
-﻿
-
-
-
-@section Scripts{
-    <script type="text/javascript">
-        
-    </script>
-}
+<ul id="slide-out" class="sidenav sidenav-fixed blue-grey darken-3">
+      <li class="no-padding">
+        <ul class="collapsible collapsible-accordion">
+          <li>
+          <a class="collapsible-header white-text">Técnicas de Amostragem<i class="material-icons right white-text">zoom_in</i></a>
+          <div class="collapsible-body blue-grey darken-1">
+            <ul>
+              <li><a href="#!" class="white-text">Aleatória</a></li>
+              <li><a href="#!" class="white-text">Uniforme</a></li>
+              <li><a href="#!" class="white-text">Proporcional</a></li>
+              <li><a href="#!" class="white-text">Sistemática</a></li>
+            </ul>
+          </div>
+          </li>
+        </ul>
+      </li>
+      <li class="no-padding">
+          <ul class="collapsible collapsible-accordion">
+          <li>
+            <a class="collapsible-header white-text">Variaveis Quantitativas<i class="material-icons right white-text">zoom_in</i></a>
+            <div class="collapsible-body blue-grey darken-1">
+              <ul>
+                <li><a href="#!" class="white-text">Discreta</a></li>
+                <li><a href="#!" class="white-text">Contínua</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </li>
+      <li><a href="#!" id="varQualitativa" class="white-text">Variaveis Qualitativas</a></li>
+</ul>
+<a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
