--- a/SoftwareEstatistica.Web/wwwroot/css/site.css
+++ b/SoftwareEstatistica.Web/wwwroot/css/site.css
@@ -1,13 +1,13 @@
-header, main, footer {
-    padding-left: 300px;
-}
-
 .sidenav li>a {
     padding: 0 16px !important;
 }
 
+#corpoSite {
+    padding-left: 300px;
+}
+
 @media only screen and (max-width : 992px) {
-    header, main, footer {
+    #corpoSite {
       padding-left: 0;
     }
 }
