--- a/SoftwareEstatistica.Web/wwwroot/css/site.css
+++ b/SoftwareEstatistica.Web/wwwroot/css/site.css
@@ -2,6 +2,16 @@
     padding: 0 16px !important;
 }
 
+
+
+[type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:after {
+    background-color: #455a64 !important
+}
+
+[type="radio"]:checked+span:after, [type="radio"].with-gap:checked+span:before, [type="radio"].with-gap:checked+span:after {
+    border: 2px solid #37474f !important;
+}
+
 #corpoSite {
     padding-left: 300px;
 }
