--- a/SoftwareEstatistica.Web/Views/Shared/_Layout.cshtml
+++ b/SoftwareEstatistica.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
     <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="~/lib/materialize/js/materialize.min.js"></script>
+    <script type="text/javascript" src="~/lib/materialize/js/materialize.js"></script>
     <script type="text/javascript" src="~/lib/devboxmessages/js/jquery.devBox.message.js"></script>
     <script type="text/javascript" src="~/js/inicializacoes.js"></script>
     <script type="text/javascript" src="~/js/sideNav.js"></script>
