--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Qualitativas.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Qualitativas.cshtml
@@ -1,26 +1,37 @@
 <div class="row center">
     <form class="col s12">
-        <p>
-            <label>
-                <input type="radio" name="radioTipo" value="A"/>
-                <span>Amostra</span>
-            </label>
-            <label>
-                <input type="radio" name="radioTipo" value="P"/>
-                <span>Populacao</span>
-            </label>
-        </p>
-        
-        <div id="textAreaVariaveis" style="display: none" class="col s6 offset-s3">
-            <div id="warningsVariaveis"></div>
-            <div class="chips center">
-                <i class="material-icons right tooltipped" data-tooltip="Ajuda" data-position="left" onclick="ExibeAjuda()" style="cursor:pointer">help</i>
-                <p>Digite os dados abaixo.</p>
+        <div class="row">
+            <p>
+                <label>
+                    <input type="radio" name="radioTipo" value="A"/>
+                    <span>Amostra</span>
+                </label>
+                <label>
+                    <input type="radio" name="radioTipo" value="P"/>
+                    <span>Populacao</span>
+                </label>
+            </p>
+        </div>
+        <div style="display: none" id="hiddenInputs">
+            <div class="row">
+                <div class="input-field col s6 offset-s3">
+                    <input id="varPesquisada" type="text">
+                    <label for="varPesquisada">Variável Pesquisada:</label>
+                </div>
             </div>
-            <a class="waves-effect waves-light btn right blue-grey darken-2 disabled" style="margin-bottom:10px;">
-                <i class="material-icons right">send</i>
-                Enviar
-            </a>
+            <div class="row">
+                <div class="col s6 offset-s3">
+                    <div id="warningsVariaveis"></div>
+                    <div class="chips center">
+                        <i class="material-icons right tooltipped" data-tooltip="Ajuda" data-position="left" onclick="ExibeAjuda()" style="cursor:pointer">help</i>
+                        <p>Digite os dados abaixo.</p>
+                    </div>
+                    <a class="waves-effect waves-light btn right blue-grey darken-2 disabled" style="margin-bottom:10px;">
+                        <i class="material-icons right">send</i>
+                        Enviar
+                    </a>
+                </div>
+        </div>
         </div>
     </form>
 </div>
@@ -30,10 +41,10 @@
         var primeiraVez = true;
 
         $("input[name=radioTipo]").change(function(){
-           $("#textAreaVariaveis").slideDown("fast"); 
+           $("#hiddenInputs").slideDown("fast"); 
 
             if(primeiraVez){
-                ExibeAjuda();
+                ExibeAjuda()    ;
                 primeiraVez = false;
             }
         });
