--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Qualitativas.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Qualitativas.cshtml
@@ -22,10 +22,9 @@
             <div class="row">
                 <div class="col s6 offset-s3">
                     <div id="warningsVariaveis"></div>
-                    <div class="chips center">
-                        <i class="material-icons right tooltipped" data-tooltip="Ajuda" data-position="left" onclick="ExibeAjuda()" style="cursor:pointer">help</i>
-                        <p>Digite os dados abaixo.</p>
-                    </div>
+                    <i class="material-icons right tooltipped" data-tooltip="Ajuda" data-position="left" onclick="ExibeAjuda()" style="cursor:pointer">help</i>
+                    <p class="caption" style="text-align: left">Digite os dados abaixo.</p>
+                    <div class="chips input-field" style="text-align: left"></div>
                     <a class="waves-effect waves-light btn right blue-grey darken-2 disabled" style="margin-bottom:10px;">
                         <i class="material-icons right">send</i>
                         Enviar
