--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Qualitativas.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Qualitativas.cshtml
@@ -22,10 +22,12 @@
             <div class="row">
                 <div class="col s6 offset-s3">
                     <div id="warningsVariaveis"></div>
+                    
                     <i class="material-icons right tooltipped" data-tooltip="Ajuda" data-position="left" onclick="ExibeAjuda()" style="cursor:pointer">help</i>
                     <p class="caption" style="text-align: left">Digite os dados abaixo.</p>
-                    <div class="chips input-field" style="text-align: left"></div>
-                    <a class="waves-effect waves-light btn right blue-grey darken-2 disabled" style="margin-bottom:10px;">
+                    <div class="chips input-field" style="text-align: left" id="divChips"></div>
+                    
+                    <a class="waves-effect waves-light btn right blue-grey darken-2 disabled" style="margin-bottom:10px;" id="btnEnviaDados">
                         <i class="material-icons right">send</i>
                         Enviar
                     </a>
@@ -33,6 +35,7 @@
         </div>
         </div>
     </form>
+    <div id="resultados"></div>
 </div>
 
 @section Scripts{
@@ -48,10 +51,26 @@
             }
         });
 
+        $("#varPesquisada, #divChips input")
+            .keyup(HabilitaDesabilita)
+            .change(HabilitaDesabilita)
+            .blur(HabilitaDesabilita);
+
+        $("#btnEnviaDados").click(function(){
+            $.get("").done().error();
+        });
+
         function ExibeAjuda(){
             M.Toast.dismissAll();
             M.toast({html: "Use a tecla 'Enter' para inserir os dados", inDuration: 5000});
             M.toast({html: "Use pontos ou vírgulas para numeros decimais", inDuration: 5000});
+        }
+
+        function HabilitaDesabilita(){
+            if($("#varPesquisada").val() && $("#divChips .chip").length > 0)
+                $("#btnEnviaDados").removeClass("disabled");
+            else
+                $("#btnEnviaDados").addClass("disabled");    
         }
     </script>
 }
