Corrigindo passagem do array de string para o controller

--- a/SoftwareEstatistica.Web/Views/Qualitativas/Rol.cshtml
+++ b/SoftwareEstatistica.Web/Views/Qualitativas/Rol.cshtml
@@ -1,10 +1,7 @@
 @{ Layout = null; }
-@model IEnumerable<string> dadosColetados
+@model IEnumerable<string>
 
+<script>
+    var dados = '@Model.FirstOrDefault()'.replace(/&quot;/g,"");
 
-@section Scripts{
-    <script>
-        var dadosColetados = @Model;
-        console.log(dadosColetados);        
-    </script>
-}
+</script>
