Implementando loading e corrigindo estrutura do html

--- a/SoftwareEstatistica.Web/Views/Shared/_Layout.cshtml
+++ b/SoftwareEstatistica.Web/Views/Shared/_Layout.cshtml
@@ -13,14 +13,13 @@
 <body>
     @RenderBody()
     
-    <div id="corpoSite"></div>
-    
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
     <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="~/lib/materialize/js/materialize.js"></script>
     <script type="text/javascript" src="~/lib/devboxmessages/js/jquery.devBox.message.js"></script>
     <script type="text/javascript" src="~/js/inicializacoes.js"></script>
     <script type="text/javascript" src="~/js/sideNav.js"></script>
+    <script type="text/javascript" src="~/js/loading.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
