--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -1,32 +1,77 @@
+<div id="divLoad" class="center">
+  <div class="preloader-wrapper big active">
+    <div class="spinner-layer spinner-blue">
+      <div class="circle-clipper left">
+        <div class="circle"></div>
+      </div>
+      <div class="gap-patch">
+        <div class="circle"></div>
+      </div>
+      <div class="circle-clipper right">
+        <div class="circle"></div>
+      </div>
+    </div>
+    <div class="spinner-layer spinner-red">
+      <div class="circle-clipper left">
+        <div class="circle"></div>
+      </div><div class="gap-patch">
+        <div class="circle"></div>
+      </div><div class="circle-clipper right">
+        <div class="circle"></div>
+      </div>
+    </div>
+    <div class="spinner-layer spinner-yellow">
+      <div class="circle-clipper left">
+        <div class="circle"></div>
+      </div><div class="gap-patch">
+        <div class="circle"></div>
+      </div><div class="circle-clipper right">
+        <div class="circle"></div>
+      </div>
+    </div>
+    <div class="spinner-layer spinner-green">
+      <div class="circle-clipper left">
+        <div class="circle"></div>
+      </div><div class="gap-patch">
+        <div class="circle"></div>
+      </div><div class="circle-clipper right">
+        <div class="circle"></div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <ul id="slide-out" class="sidenav sidenav-fixed blue-grey darken-3">
-      <li class="no-padding">
-        <ul class="collapsible collapsible-accordion">
-          <li>
-          <a class="collapsible-header white-text">Técnicas de Amostragem<i class="material-icons right white-text">zoom_in</i></a>
-          <div class="collapsible-body blue-grey darken-1">
-            <ul>
-              <li><a href="#!" class="white-text">Aleatória</a></li>
-              <li><a href="#!" class="white-text">Uniforme</a></li>
-              <li><a href="#!" class="white-text">Proporcional</a></li>
-              <li><a href="#!" class="white-text">Sistemática</a></li>
-            </ul>
-          </div>
-          </li>
+  <li class="no-padding">
+    <ul class="collapsible collapsible-accordion">
+      <li>
+      <a class="collapsible-header white-text">Técnicas de Amostragem<i class="material-icons right white-text">zoom_in</i></a>
+      <div class="collapsible-body blue-grey darken-1">
+        <ul>
+          <li><a href="#!" class="white-text">Aleatória</a></li>
+          <li><a href="#!" class="white-text">Uniforme</a></li>
+          <li><a href="#!" class="white-text">Proporcional</a></li>
+          <li><a href="#!" class="white-text">Sistemática</a></li>
         </ul>
+      </div>
       </li>
-      <li class="no-padding">
-          <ul class="collapsible collapsible-accordion">
-          <li>
-            <a class="collapsible-header white-text">Variaveis Quantitativas<i class="material-icons right white-text">zoom_in</i></a>
-            <div class="collapsible-body blue-grey darken-1">
-              <ul>
-                <li><a href="#!" class="white-text">Discreta</a></li>
-                <li><a href="#!" class="white-text">Contínua</a></li>
-              </ul>
-            </div>
-          </li>
-        </ul>
+    </ul>
+  </li>
+  <li class="no-padding">
+      <ul class="collapsible collapsible-accordion">
+      <li>
+        <a class="collapsible-header white-text">Variaveis Quantitativas<i class="material-icons right white-text">zoom_in</i></a>
+        <div class="collapsible-body blue-grey darken-1">
+          <ul>
+            <li><a href="#!" class="white-text">Discreta</a></li>
+            <li><a href="#!" class="white-text">Contínua</a></li>
+          </ul>
+        </div>
       </li>
-      <li><a href="#!" id="varQualitativa" class="white-text">Variaveis Qualitativas</a></li>
+    </ul>
+  </li>
+  <li><a href="#!" id="varQualitativa" class="white-text">Variaveis Qualitativas</a></li>
 </ul>
 <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
+<div id="corpoSite"></div>
