--- a/SoftwareEstatistica.Web/wwwroot/css/site.css
+++ b/SoftwareEstatistica.Web/wwwroot/css/site.css
@@ -1,3 +1,7 @@
+.toast{
+    top: -9cd 0px !important;
+}
+
 #divLoad{
     padding-top: 23%;
     top: 0;
@@ -10,9 +14,9 @@
 }
 
 .areaDados{
-    border: 2px solid black;
+    border: 3px solid #37474f;
     border-radius: 6px;
-    padding:10px 0;
+    padding:12px 0;
 }
 
 .chips .input {
