Adicionando ordenação das variáveis qualitativas ordinais

--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -75,3 +75,7 @@
 <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
 <div id="corpoSite"></div>
+
+@section Scripts{
+  <script type="text/javascript" src="~/js/sideNav.js"></script>
+}
