--- a/SoftwareEstatistica.Web/wwwroot/css/site.css
+++ b/SoftwareEstatistica.Web/wwwroot/css/site.css
@@ -1,5 +1,14 @@
+#sortable{
+    overflow:auto; 
+}
+
 .toast{
     top: -9cd 0px !important;
+}
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active{
+    border: 1px solid #37474f !important;
+    background: #455a64 !important;
 }
 
 #divLoad{
