Adicionando Analise Quantitativa

--- a/SoftwareEstatistica.Web/Views/Shared/_Layout.cshtml
+++ b/SoftwareEstatistica.Web/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="~/lib/materialize/css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="~/lib/devboxmessages/css/devBox.message.css"/>
     <link type="text/css" rel="stylesheet" href="~/css/site.css"/>
+    <link type="text/css" rel="stylesheet" href="~/css/site2.css"/>
 </head>
 <body>
     @RenderBody()
