--- a/SoftwareEstatistica.Web/Views/Home/Index.cshtml
+++ b/SoftwareEstatistica.Web/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
         <a class="collapsible-header white-text">Variaveis Quantitativas<i class="material-icons right white-text">zoom_in</i></a>
         <div class="collapsible-body blue-grey darken-1">
           <ul>
-            <li><a href="#!" class="white-text">Discreta</a></li>
+            <li><a id="varDiscreta" href="#!" class="white-text">Discreta</a></li>
             <li><a href="#!" class="white-text">Contínua</a></li>
           </ul>
         </div>
@@ -75,3 +75,5 @@
 <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
 <div id="corpoSite"></div>
+
+
