--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Qualitativas.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Qualitativas.cshtml
@@ -1,63 +1,65 @@
-<div class="row center">
-    <form class="col s8 offset-s2">
-        <i  class="material-icons right tooltipped" 
-            data-tooltip="Ajuda" 
-            data-position="left" 
-            onclick="ExibeAjuda()" 
-            style="cursor:pointer; margin-top: 10px; margin-right: 10px">help</i>
-        <div class="areaDados">
-            <div class="row">
-                <p>
-                    <label>
-                        <input type="radio" name="radioTipo" value="A"/>
-                        <span>Amostra</span>
-                    </label>
-                    <label>
-                        <input type="radio" name="radioTipo" value="P"/>
-                        <span>Populacao</span>
-                    </label>
-                </p>
-            </div>
-            <div style="display: none" id="hiddenInputs">
-                <div class="row">
-                    <div class="input-field col s10 offset-s1">
-                        <input id="varPesquisada" type="text">
-                        <label for="varPesquisada">Variável Pesquisada:</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col s10 offset-s1">
-                        <div id="warningsVariaveis"></div>
-                        <p class="caption" style="text-align: left">Digite os dados abaixo.</p>
-                        <div class="chips input-field" style="text-align: left" id="divChips"></div>
-                    </div>
-                </div>
+<div>
+    <div class="row center">
+        <form class="col s8 offset-s2">
+            <i  class="material-icons right tooltipped" 
+                data-tooltip="Ajuda" 
+                data-position="left" 
+                onclick="ExibeAjuda()" 
+                style="cursor:pointer; margin-top: 10px; margin-right: 10px">help</i>
+            <div class="areaDados">
                 <div class="row">
                     <p>
                         <label>
-                            <input type="radio" name="radioTipoQualitativa" value="N" checked/>
-                            <span>Nominal</span>
+                            <input type="radio" name="radioTipo" value="A"/>
+                            <span>Amostra</span>
                         </label>
                         <label>
-                            <input type="radio" name="radioTipoQualitativa" value="O"/>
-                            <span>Ordinal</span>
+                            <input type="radio" name="radioTipo" value="P"/>
+                            <span>Populacao</span>
                         </label>
                     </p>
                 </div>
-                <div class="row">
-                    <div class="col s10 offset-s1">
-                        <a class="waves-effect waves-light btn right blue-grey darken-2 disabled" style="margin-bottom:10px;" id="btnEnviaDados">
-                            <i class="material-icons right">send</i>
-                            Enviar
-                        </a>
+                <div style="display: none" id="hiddenInputs">
+                    <div class="row">
+                        <div class="input-field col s10 offset-s1">
+                            <input id="varPesquisada" type="text">
+                            <label for="varPesquisada">Variável Pesquisada:</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s10 offset-s1">
+                            <div id="warningsVariaveis"></div>
+                            <p class="caption" style="text-align: left">Digite os dados abaixo.</p>
+                            <div class="chips input-field" style="text-align: left" id="divChips"></div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <p>
+                            <label>
+                                <input type="radio" name="radioTipoQualitativa" value="N" checked/>
+                                <span>Nominal</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="radioTipoQualitativa" value="O"/>
+                                <span>Ordinal</span>
+                            </label>
+                        </p>
+                    </div>
+                    <div class="row">
+                        <div class="col s10 offset-s1">
+                            <a class="waves-effect waves-light btn right blue-grey darken-2 disabled" style="margin-bottom:10px;" id="btnEnviaDados">
+                                <i class="material-icons right">send</i>
+                                Enviar
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </form>
-</div>
-<div class="row center" style="padding: 0 15px">
-    <div id="resultados" class="col s8 offset-s2 areaDados" style="display: none;"></div>
+        </form>
+    </div>
+    <div class="row center" style="padding: 0 15px">
+        <div id="resultados" class="col s8 offset-s2 areaDados" style="display: none;"></div>
+    </div>
 </div>
 
 @section Scripts{
@@ -91,6 +93,7 @@
                 jsonDadosColetados: JSON.stringify(dadosColetados),
                 ordenar: ""
             }).done(function(data){
+                $(".rowAdicionada").remove();
                 $("#resultados").html(data).slideDown("fast");
             }).error(function(xhr){
                 M.Toast.dismissAll();  
