--- a/SoftwareEstatistica.Web/wwwroot/css/site.css
+++ b/SoftwareEstatistica.Web/wwwroot/css/site.css
@@ -15,6 +15,14 @@
     font-size: 30px;
 }
 
+td, th{
+    padding: 10px 10px !important;
+    text-align: center !important;
+    font-size: 30px;
+    border: 1px solid black;
+    width: 40px;
+}
+
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active{
     border: 1px solid #37474f !important;
     background: #455a64 !important;
