--- a/SoftwareEstatistica.Web/Views/Qualitativas/Ordinal.cshtml
+++ b/SoftwareEstatistica.Web/Views/Qualitativas/Ordinal.cshtml
@@ -9,9 +9,9 @@
     data-position="left" 
     onclick="ExibeAjudaOrdenacao()" 
     style="cursor:pointer; margin-top: 10px;">help</i>
-<div class="row">
+<div class="row" style="padding: 0 50px;">
     <div class="col s12">
-        <h4 style="text-align left">Ordenação</h4>    
+        <h4 style="text-align: left; margin-left: -13px;">Ordenação</h4>    
     </div>
 </div>
 <div class="row" style="padding: 0 50px;">
@@ -56,7 +56,7 @@
                         html: [ $("<div>",{
                                     class: "col s8 offset-s2 areaDados",
                                     style: "display: none;",
-                                    html: [data]
+                                    html:  [data]
                                 }) ]
                     }));
                 else
