--- a/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Tabela.cshtml
+++ b/SoftwareEstatistica.Web/Views/QualitativasQuantitativas/Tabela.cshtml
@@ -2,23 +2,35 @@
 
 <div class="col s10 offset-s1">
     <h5 class="left">Tabela</h5>
-    <table class="highlight" id="dadosOrdenados"></table>
+    <table class="tabela highlight" id="dadosOrdenados">
+        <th>
+            <td>VaP</td>
+            <td>Fr</td>
+            <td>FrP</td>
+            <td>FrA</td>
+            <td>FrAP</td>
+        </th>
+
+    </table>
 </div>    
 <script>
     let dadosOrdenados = JSON.parse(String('@ViewBag.Dados'.replace(/&quot;/g,'"')));
     let objTabela = [];
 
     for(let i = 0; i < dadosOrdenados.length; i++){
-        if(i == 0 || objTabela[objTabela.length - 1]['Vet'] != dadosOrdenados[i]){
-            objTabela.push({'Vet': dadosOrdenados[i], 'Fr': 1, 'FrP': 100, 'FrA': 1, 'FrAP': 100});
+        if(i == 0 || objTabela[objTabela.length - 1]['Var'] != dadosOrdenados[i]){
+            objTabela.push({'Var': dadosOrdenados[i], 'Fr': 1, 'FrP': 100, 'FrA': 1, 'FrAP': 100});
         }else{
             objTabela[objTabela.length - 1]['Fr']++;
         }
     }
 
+    let FrA = 0;
+
     objTabela.forEach(function(item){
-        let FrP = (item['Fr']*100)/dadosOrdenados.length;
-        console.log(dadosOrdenados.length);
-        console.log('Vetor: ' + item['Vet'] + ' Frequencia: ' + item['Fr'] + ' Frequencia %: ' + FrP.toFixed() + ' Frequencia Acumulada: ' + item['FrA'] + ' Frequencia Acumulda %: ' + item['FrAP']);
-    })
+        item['FrP'] = ((item['Fr']*100)/dadosOrdenados.length).toFixed(2);
+        FrA += item['Fr'];
+        item['FrA'] = FrA;
+        item['FrAP'] = ((FrA*100)/dadosOrdenados.length).toFixed(2);
+    });
 </script>  
