--- a/SoftwareEstatistica.Web/Views/Quantitativas/Rol.cshtml
+++ b/SoftwareEstatistica.Web/Views/Quantitativas/Rol.cshtml
@@ -2,7 +2,7 @@
 
 <div class="col s10 offset-s1">
     <h5 class="left">Rol</h5>
-    <table class="highlight" id="dadosOrdenados"></table>
+    <table class="highlight" id="dadosOrdenados" style="margin-bottom: 30px"></table>
 </div>
 
 <script>
